Ajustei a imagem do Pokémon na Pokédex

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pokédex</title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="./css/estilo.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="icon" href="./icons/pokeball.png">
 </head>
 <body>
 	
+	<main>
+
+		<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/9.gif" class="imagemPoke">
+		<img src="./images/pokedex.png" alt="pokedex" class="pokedex"> 
+
+	</main>
 
 </body>
 </html>
