Adicionei o input do formulário e também os botões de anterior, próximo e shiny.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
 	<link rel="stylesheet" type="text/css" href="./css/estilo.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="icon" href="./icons/pokeball.png">
+	<script defer src="./js/script.js"></script>
 </head>
 <body>
 	
 	<main>
+	
+		<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/392.gif" alt="pokemon" class="imagemPoke">
+		
+		<h1 class="dadosPoke">
+			<span class="numeroPoke">392 - </span>
+			<span class="nomePoke">infernape</span>
+		</h1>
 
-		<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/392.gif" class="imagemPoke">
+		<form class="form">
+			<input 
+			required 
+			class="inputForm" 
+			type="search" 
+			placeholder="Digite o n° ou nome do Pokémon">
+		</form>
+
+		
+		<div class="botoes">
+			<button class="botao btnAnterior">Anterior &lt;</button>
+			<button class="botao btnProximo">Próximo ></button>
+			<button class="botao btnShiny">Shiny</button>
+		</div>
+		
+
 		<img src="./images/pokedex.png" alt="pokedex" class="pokedex"> 
 
 	</main>
