--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	
 	<main>
 	
-		<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/392.gif" alt="pokemon" class="imagemPoke">
+		<img src="#" alt="pokemon" class="imagemPoke">
 		
 		<h1 class="dadosPoke">
-			<span class="numeroPoke">392 - </span>
-			<span class="nomePoke">infernape</span>
+			<span class="numeroPoke"> - </span>
+			<span class="nomePoke"></span>
 		</h1>
 
 		<form class="form">
