--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<main>
 	
-		<img src="#" alt="pokemon" class="imagemPoke">
+		<img src="#"  class="imagemPoke">
 		
 		<h1 class="dadosPoke">
 			<span class="numeroPoke"> - </span>
@@ -21,6 +21,7 @@
 		</h1>
 
 		<form class="form">
+			<audio id="meuAudio" src="./sounds/click.wav"" preload="auto"></audio>
 			<input 
 			required 
 			class="inputForm" 
